--- a/WeldingProject/WeldingAnalyz/appsettings.json
+++ b/WeldingProject/WeldingAnalyz/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB ;Database=WeldingData;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=U-FURMANAU;Database=Welding;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*"
 }
